--- a/charts/celeborn-shuffle-service/Chart.yaml
+++ b/charts/celeborn-shuffle-service/Chart.yaml
@@ -18,25 +18,13 @@
 apiVersion: v2
 name: celeborn
 description: >
-  Celeborn is dedicated to improving the efficiency and elasticity of different map-reduce engines.
-  Celeborn provides an elastic and high efficient management service for shuffle data.
-
-# A chart can be either an 'application' or a 'library' chart.
-#
-# Application charts are a collection of templates that can be packaged into versioned archives
-# to be deployed.
-#
-# Library charts provide useful utilities or functions for the chart developer. They're included as
-# a dependency of application charts to inject those utilities and functions into the rendering
-# pipeline. Library charts do not define any templates and therefore cannot be deployed.
+  [Apache Celeborn](https://celeborn.apache.org) is an intermediate data service for Big Data compute engines (i.e. ETL, OLAP and Streaming engines) to boost performance, stability, and flexibility.
+  Intermediate data typically include shuffle and spilled data.
 type: application
-
-# This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 0.1.0
-
-# This is the version number of the application being deployed. This version number should be
-# incremented each time you make changes to the application. Versions are not expected to
-# follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 0.4.0
+keywords:
+  - Apache Celeborn
+  - Big Data
+  - Shuffle
+home: https://github.com/apache/celeborn
