--- a/charts/celeborn-shuffle-service/values.yaml
+++ b/charts/celeborn-shuffle-service/values.yaml
@@ -1,17 +1,113 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
+# Default values for celeborn.
+# This is a YAML-formatted file.
+# Declare variables to be passed into your templates.
+
+# -- String to override the default generated name
+nameOverride: ""
+
+# -- String to override the default generated fullname
+fullnameOverride: ""
+
+# Specifies the Celeborn image to use
 image:
-  repository: public.ecr.aws/myang-poc/celeborn-rss
-  tag: spark3.3_8-jdk
-  # tag: spark3.5_jdk17
+  # -- Image repository
+  repository: 724853865853.dkr.ecr.us-west-2.amazonaws.com/eks-celeborn
+  # -- Image tag
+  tag: emr-6.10.0
+  # -- Image pull policy
   pullPolicy: Always
 
-nodeSelector:
-  app: rss
+# -- Image pull secrets for private image registry
+imagePullSecrets: []
 
-# master replicas should not less than 3 for HA
+# -- Specifies the number of Celeborn master replicas to deploy, master replicas should not less than 3
 masterReplicas: 3
-workerReplicas: 3
-hostNetwork: false
+# -- Specifies the number of Celeborn worker replicas to deploy, should less than node number
+workerReplicas: 5
+
+service:
+  # -- Specifies service type
+  type: ClusterIP
+  # -- Specifies service port
+  port: 9097
+
+cluster:
+  # -- Specifies Kubernetes cluster name
+  name: cluster
+
+# Specifies Celeborn volumes.
+# Currently supported volume types are `emptyDir` and `hostPath`.
+# Note that `hostPath` only works in hostPath type using to set `volumes hostPath path`.
+# Celeborn Master will pick first volumes for store raft log.
+# `diskType` only works in Celeborn Worker with hostPath type to manifest local disk type.
+volumes:
+  # -- Specifies volumes for Celeborn master pods
+  master:
+    - mountPath: /mnt/local-data
+      hostPath: /mnt/local-data
+      type: hostPath
+      capacity: 1250Gi
+  # -- Specifies volumes for Celeborn worker pods
+  worker:
+    - mountPath: /mnt/local-data
+      hostPath: /mnt/local-data
+      type: hostPath
+      diskType: SSD
+      capacity: 5000Gi
+
+
+# -- Celeborn configurations
+celeborn:
+  celeborn.master.ha.enabled: true
+  celeborn.metrics.enabled: true
+  celeborn.metrics.prometheus.path: /metrics/prometheus
+  celeborn.master.http.port: 9098
+  celeborn.worker.http.port: 9096
+  celeborn.worker.monitor.disk.enabled: false
+  celeborn.shuffle.chunk.size: 8m
+  celeborn.rpc.io.serverThreads: 64
+  celeborn.rpc.io.numConnectionsPerPeer: 2
+  celeborn.rpc.io.clientThreads: 64
+  celeborn.rpc.dispatcher.numThreads: 4
+  celeborn.worker.flusher.buffer.size: 256K
+  celeborn.worker.fetch.io.threads: 32
+  celeborn.worker.push.io.threads: 32
+  celeborn.push.stageEnd.timeout: 120s
+  celeborn.application.heartbeat.timeout: 120s
+  celeborn.worker.heartbeat.timeout: 120s
+
+# -- Celeborn environment variables
+environments:
+  CELEBORN_MASTER_MEMORY: 2g
+  CELEBORN_MASTER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-master.out -Dio.netty.leakDetectionLevel=advanced"
+  CELEBORN_WORKER_MEMORY: 2g
+  CELEBORN_WORKER_OFFHEAP_MEMORY: 12g
+  CELEBORN_WORKER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-worker.out -Dio.netty.leakDetectionLevel=advanced"
+  CELEBORN_NO_DAEMONIZE: 1
+  TZ: "Asia/Shanghai"
+
+# -- Specifies the DNS policy for Celeborn pods to use
 dnsPolicy: ClusterFirst
+
+# -- Specifies whether to use the host's network namespace
+hostNetwork: false
 
 resources:
   # -- Pod resources for Celeborn master pods
@@ -32,81 +128,58 @@ resources:
     #   cpu: 100m
     #   memory: 128Mi
 
+# -- Container security context
 securityContext:
+  # Specifies the user ID to run the entrypoint of the container process
   runAsUser: 10006
+  # Specifies the group ID to run the entrypoint of the container process
   runAsGroup: 10006
+  # Specifies the group ID to use when modifying ownership and permissions of the mounted volumes
   fsGroup: 10006
+
 priorityClass:
+  # Priority class for Celeborn master pods
   master:
+    # -- Specifies whether a new priority class for Celeborn master pods should be created
     create: false
+    # -- Specifies the name of priority class for Celeborn master pods to be used (created if `create: true`), empty means `${Release.Name}-master-priority-class`
     name: ""
+    # -- Specifies the integer value of this priority class, default is half of system-cluster-critical
     value: 1000000000
+
+  # Priority class for Celeborn worker pods
   worker:
+    # -- Specifies whether a new priority class for Celeborn worker pods should be created
     create: false
+    # -- Specifies the name of priority class for Celeborn worker pods to be used (created if `create: true`), empty means `${Release.Name}-worker-priority-class`
     name: ""
+    # -- Specifies the integer value of this priority class, default is Celeborn master value minus 1000
     value: 999999000
-volumes:
+
+# -- Pod annotations
+podAnnotations: {}
+# key1: value1
+# key2: value2
+
+# -- Pod node selector
+nodeSelector:
   master:
-    - mountPath: /rss1/rss_ratis/
-      hostPath: /local1/rss_ratis
-      type: hostPath
-      capacity: 100g
+    NodeGroupType: 'CelebornMaster'
   worker:
-    - mountPath: /rss1/disk1
-      hostPath: /local1/disk1
-      type: hostPath
-      diskType: SSD
-      capacity: 6t
-    - mountPath: /rss2/disk2
-      hostPath: /local2/disk2
-      type: hostPath
-      diskType: SSD
-      capacity: 6t
-# celeborn configurations      
-celeborn:
-  celeborn.master.ha.enabled: true
-  celeborn.metrics.enabled: true
-  celeborn.metrics.prometheus.path: /metrics/prometheus
-  celeborn.master.metrics.prometheus.port: 9098
-  celeborn.worker.metrics.prometheus.port: 9096
-  celeborn.worker.monitor.disk.enabled: true
-  celeborn.shuffle.chunk.size: 8m
-  celeborn.rpc.io.serverThreads: 64
-  celeborn.rpc.io.numConnectionsPerPeer: 8
-  celeborn.replicate.io.numConnectionsPerPeer: 24
-  celeborn.rpc.io.clientThreads: 64
-  celeborn.rpc.dispatcher.numThreads: 4
-  celeborn.worker.flusher.buffer.size: 256K
-  celeborn.worker.flusher.threads: 512
-  celeborn.worker.flusher.ssd.threads: 512
-  celeborn.worker.fetch.io.threads: 256
-  celeborn.worker.push.io.threads: 128
-  celeborn.client.push.stageEnd.timeout: 900s
-  celeborn.worker.commitFiles.threads: 128
-environments:
-  CELEBORN_MASTER_MEMORY: 4g
-  CELEBORN_MASTER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-master.out -Dio.netty.leakDetectionLevel=advanced"
-  CELEBORN_WORKER_MEMORY: 4g
-  CELEBORN_WORKER_OFFHEAP_MEMORY: 24g
-  CELEBORN_WORKER_JAVA_OPTS: "-XX:-PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -Xloggc:gc-worker.out -Dio.netty.leakDetectionLevel=advanced"
-  CELEBORN_NO_DAEMONIZE: 1
-  TZ: "Australia/Melbourne"
+    NodeGroupType: 'CelebornWorker'
 
-podMonitor:
-  enable: true
-  podMetricsEndpoint:
-    scheme: http
-    interval: 5s
-    portName: metrics
+# -- Pod tolerations
+tolerations: []
+# - key: key1
+#   operator: Equal
+#   value: value1
+#   effect: NoSchedule
+# - key: key2
+#   operator: Exists
+#   effect: NoSchedule
 
-service:
-    type: ClusterIP
-    port: 9097
-cluster:
-  name: cluster
-
-# configmap: celeborn-conf
 affinity:
+  # -- Pod affinity for Celeborn master pods
   master:
     podAntiAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
@@ -121,6 +194,7 @@ affinity:
                 values:
                   - master
           topologyKey: kubernetes.io/hostname
+  # -- Pod affinity for Celeborn worker pods
   worker:
     podAntiAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
@@ -136,3 +210,14 @@ affinity:
                   - worker
           topologyKey: "kubernetes.io/hostname"
 
+podMonitor:
+  # -- Specifies whether to enable creating pod monitors for Celeborn pods
+  enable: true
+  # -- Specifies pod metrics endpoint
+  podMetricsEndpoint:
+    # Specifies scheme
+    scheme: http
+    # Specifies scrape interval
+    interval: 5s
+    # Specifies port name
+    portName: metrics
